--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "19.1.0"
 
     defaultConfig {
-        applicationId "rh.twitchtvclient"
-        minSdkVersion 8
+        applicationId "rh.listViewSkeleton"
+        minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -23,10 +23,13 @@ dependencies {
     compile 'com.google.android:support-v4:r7'
     compile 'com.squareup.retrofit:retrofit:1.6.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
-    compile 'com.squareup.okhttp:okhttp:1.6.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.okio:okio:1.0.0'
+    compile 'com.squareup:otto:1.3.5'
+    compile 'javax.annotation:jsr250-api:1.+'
+    compile 'com.jakewharton:butterknife:5.1.1'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
